--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-    <version>1.0.0</version>
+    <version>1.0.1</version>
 
     <groupId>eu.trixcms.trixcore</groupId>
     <artifactId>bukkit</artifactId>
@@ -42,14 +42,14 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.github.TrixCMS-V-2</groupId>
+            <groupId>eu.trixcms</groupId>
             <artifactId>trixcore-minecraft-api</artifactId>
-            <version>v1.0.0</version>
+            <version>v1.0.1</version>
         </dependency>
         <dependency>
-            <groupId>com.github.TrixCMS-V-2</groupId>
+            <groupId>eu.trixcms</groupId>
             <artifactId>trixcore-minecraft-common</artifactId>
-            <version>v1.0.1</version>
+            <version>v1.0.2</version>
         </dependency>
     </dependencies>
 
